compiler/testData/diagnostics/testsWithStdLib/regression/ea70880_illegalJvmName.fir.kt
<!INAPPLICABLE_CANDIDATE!>@JvmName()<!>
fun foo() {}

<!INAPPLICABLE_CANDIDATE!>@JvmName(42)<!>
fun bar() {}

<!INAPPLICABLE_CANDIDATE!>@JvmName("a", "b")<!>
fun baz() {}
